# orber

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  video.rs  video_input.rs
crates/core/: Cargo.toml
crates/core/assets/fonts/: OFL.txt
crates/core/src/: animate.rs  batch.rs  cluster.rs  color_track.rs  glyph.rs  gpu.rs  keyframe_track.rs  lib.rs  orb.rs  orb.wgsl  orb_aquarelle.wgsl  orb_circle.wgsl  orb_glyph.wgsl  orb_glyph_bleed.wgsl  output_mode.rs  style.rs  variations.rs
crates/wasm/: Cargo.toml  test.html
crates/wasm/src/: ab_harness.rs  gpu.rs  lib.rs
docs/: overview.md  roadmap.md
src/: animate.rs  background.rs  cluster.rs  color_mod.rs  lib.rs  main.rs  orb.rs  output_mode.rs  style.rs  variations.rs  video.rs
src/aquarelle/: mod.rs
web/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts  wrangler.toml
web/poc/: webgl-orb.html
web/public/: _headers  manifest.webmanifest  sw.js
web/scripts/: cf-build.sh  gen-qr.mjs
web/src/: env.d.ts
web/src/components/: AbPanel.tsx  AdvancedSection.tsx  AffiliateGrid.tsx  Footer.tsx  LangToggle.tsx  PwaInstallPrompt.tsx  Studio.tsx  Subtitle.tsx
web/src/data/: affiliateProducts.ts
web/src/layouts/: Base.astro
web/src/lib/: abLogic.test.ts  abLogic.ts  decodeImage.ts  encodeAlphaVideoWasm.test.ts  encodeAlphaVideoWasm.ts  encodeMp4.test.ts  encodeMp4.ts  encodeWebmAlpha.ts  encodeWebmAlphaWasm.test.ts  encodeWebmAlphaWasm.ts  jsGlyphSdf.test.ts  jsGlyphSdf.ts  movMuxer.ts  orberClient.alpha.test.ts  orberClient.error.test.ts  orberClient.ts  orberGl.test.ts  orberGl.ts  orberWorker.ts  strings.test.ts  strings.ts  webgpu.test.ts  webgpu.ts  workerLogic.test.ts  workerLogic.ts
web/src/pages/: gpu-lab.astro  index.astro
