[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/wasm"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
homepage = "https://github.com/kako-jun/orber"
repository = "https://github.com/kako-jun/orber"
rust-version = "1.78.0"

[workspace.dependencies]
# core は features = ["png"] のみで継承、CLI は features 追加で format auto-detection を有効化する
image = { version = "0.25", default-features = false }
kmeans_colors = { version = "0.7", default-features = false, features = ["palette_color"] }
palette = "0.7"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
tiny-skia = "0.11"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
# wasm 向け
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
