[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/wasm"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
homepage = "https://github.com/kako-jun/orber"
repository = "https://github.com/kako-jun/orber"
rust-version = "1.78.0"

[workspace.dependencies]
# core は features = ["png"] のみで継承、CLI は features 追加で format auto-detection を有効化する
image = { version = "0.25", default-features = false }
kmeans_colors = { version = "0.7", default-features = false, features = ["palette_color"] }
palette = "0.7"
rand = "0.8"
rand_chacha = "0.3"
aquarelle = "0.3"
thiserror = "1"
# pure-Rust path rasterizer (wasm 可)。glyph font→SDF の fill に core が使う（#223）。
zeno = "0.3"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
# wgpu (Rust + WGSL) production renderer (#207). core / cli の gpu feature でのみ
# 有効化する。wasm32 + gpu もビルド可（#229: default feature の webgpu バックエンドを
# 使う。`webgl` feature は採らない = WebGPU 必須・fallback 無し）。pollster は
# wasm32 で使えないため core 側で native 専用 target dependency にしている。
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# wasm 向け
wasm-bindgen = "0.2"
js-sys = "0.3"
# #230: ブラウザ WebGPU canvas present 経路（orber-wasm の wasm32 専用依存）。
# wasm-bindgen-futures は `#[wasm_bindgen] async fn`（gpu_init）の必須ランタイム、
# web-sys は HtmlCanvasElement 型（wgpu::SurfaceTarget::Canvas の引数）に使う。
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# #242: A/B 三者画素比較 dev ハーネス（orber-wasm の native dev-dependency のみ）。
# ブラウザのキャプチャモード（?ab=1&abcap=1）が落とす ab-params.json のパースに使う。
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
