[package]
name = "orber"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Turn photos and videos into abstract orb mood images and short-form vertical videos"
documentation = "https://docs.rs/orber"
readme = "../../README.md"
keywords = ["image", "video", "abstract", "orb", "mood"]
categories = ["command-line-utilities", "graphics", "multimedia"]
exclude = [".github/", "target/"]

[[bin]]
name = "orber"
path = "src/main.rs"

[dependencies]
# CLI は GPU(WGSL) を唯一のレンダラとする (#225)。orber-core の gpu feature を
# ハード依存にして、`cargo build -p orber`（--features 無し）で常に GPU ビルドになる。
orber-core = { path = "../core", version = "0.3.0", features = ["gpu"] }
clap = { workspace = true }
image = { workspace = true, default-features = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
